--- a/assets/css/educationSectionStyle.css
+++ b/assets/css/educationSectionStyle.css
@@ -426,7 +426,7 @@
     width: 405px;
   }
   #education > img {
-    height: 150px;
+    height: 190px;
   }
   #eduBox div {
     width: 285px;
@@ -509,6 +509,9 @@
 
 }
 @media all and (max-width: 425px) {
+  #education > img {
+    height: 145px;
+  }
   
 }
 @media all and (max-width: 375px) {
@@ -516,7 +519,7 @@
     width: 305px;
   }
   #education > img {
-    height: 105px;
+    height: 125px;
   }
   #eduBox div {
     width: 285px;
@@ -600,6 +603,9 @@
  
 }
 @media all and (max-width: 320px) {
+  #education > img {
+    height: 105px;
+  }
   
 }
 
