--- a/assets/css/projectSectionStyle.css
+++ b/assets/css/projectSectionStyle.css
@@ -31,7 +31,7 @@
   right: 55px;
   opacity: 25%;
 }
-#project > section {
+#project > #project-slider > section {
   width: 1660px;
   height: 815px;
   top: 100px;
@@ -42,27 +42,27 @@
   justify-content: space-evenly;
   /* border: 1px solid red; */
 }
-#project > section > div {
+#project > #project-slider > section > div {
   background-color: #010418;
   width: 522px;
   height: 385px;
   position: absolute;
-  opacity: 0.3;
+  background-color: rgb(255 255 255 / 6%);
   /* border: 1px solid red; */
 }
-#project > section > div:nth-child(1) {
+#project > #project-slider > section > div:nth-child(1) {
   left: 0;
   top: 0;
 }
-#project > section > div:nth-child(2) {
+#project > #project-slider > section > div:nth-child(2) {
   left: 34%;
   top: 0;
 }
-#project > section > div:nth-child(3) {
+#project > #project-slider > section > div:nth-child(3) {
   right: 0;
   top: 0;
 }
-#project > section > div:nth-child(4) {
+#project > #project-slider > section > div:nth-child(4) {
   left: 0;
   bottom: 0;
 }
@@ -166,48 +166,221 @@
 transform: translate(-50%, -50%) scale(1);
 opacity: 1;
 }
-
-#proImg div:nth-child(1) {
-  left: 0;
-  top: 0;
-  
-}
-#proImg div:nth-child(2) {
-  left: 34%;
-  top: 0;
-}
-#proImg div:nth-child(3) {
-  right: 0;
-  top: 0;
-}
-#proImg div:nth-child(4) {
-  left: 0;
-  bottom: 60px;
-}
-#proImg div img {
+.card-container #card div img {
   width: 522px;
   height: 320px;
 }
-#projectName h2 {
+.card-container #card h2 {
   color: #ffffff;
   font-size: 30px;
-  position: absolute;
-}
-#projectName h2:nth-child(1) {
-  left: 60px;
+  position: relative;
+  text-align: center;
   top: 310px;
-}
-#projectName h2:nth-child(2) {
-  top: 310px;
-  left: 630px;
-}
-#projectName h2:nth-child(3) {
-  top: 310px;
-  right: 75px;
-}
-#projectName h2:nth-child(4) {
-  bottom: -15px;
-  left: 75px;
+  
 }
 
 /* Project Section End */
+
+
+/*Responsive Style Start */
+@media all and (max-width: 1440px) {
+  #project {
+    height: 140vh;
+  }
+  #project > #project-slider > section {
+    width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 19px;
+    left: 30px;
+  }
+  #project > #project-slider > section > div:nth-child(1) {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  #project > #project-slider > section > div:nth-child(2) {
+    left: auto;
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  #project > #project-slider > section > div:nth-child(3) {
+    right: auto;
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  #project > #project-slider > section > div:nth-child(4) {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  #proImg div:nth-child(1) {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  #proImg div:nth-child(2) {
+    left: auto;
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  #proImg div:nth-child(3) {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  #proImg div:nth-child(4) {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+ 
+}
+@media all and (max-width: 1200px) {
+  #project > #project-slider {
+    position: relative;
+    width: 100vw;
+  }
+  #project > #project-slider > section {
+    width: 830px;
+    left: 30px;
+    grid-column-gap: 160px;
+    grid-row-gap: 46px;
+  }
+  #project > #project-slider > section > div {
+    width: 420px;
+    
+  }
+  .imgHover {
+    width: 420px;
+    height: 320px;
+    font-size: 15px;
+  }
+  .card-container #card div img {
+    width: 420px;
+  }
+
+}
+@media all and (max-width: 1024px) {
+  #project > #project-slider > section {
+    left: -55px;
+  } 
+
+}
+
+@media all and (max-width: 992px) {
+  #project > #project-slider > section {
+    left: -75px;
+  } 
+}
+
+@media all and (max-width: 768px) {
+  #project {
+    height: 105vh;
+    overflow: hidden;
+  }
+  #project > img {
+    height: 545px;
+  }
+  #project > #project-slider > section {
+    width: 1200px;
+    height: 385px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 485px;
+    grid-row-gap: 0px;
+    left: -50px;
+    top: 225px;
+  }
+  #project > #project-slider > section > div:nth-child(1) {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  #project > #project-slider > section > div:nth-child(2) {
+    left: auto;
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  #project > #project-slider > section > div:nth-child(3) {
+    right: auto;
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  #project > #project-slider > section > div:nth-child(4) {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+  #proImg div:nth-child(1) {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  #proImg div:nth-child(2) {
+    left: auto;
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  #proImg div:nth-child(3) {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  #proImg div:nth-child(4) {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+ 
+}
+
+@media all and (max-width: 576px) {
+  #project > #project-slider > section {
+    left: -50px;
+  }
+
+}
+@media all and (max-width: 425px) {
+  #project > #project-slider > section {
+    grid-column-gap: auto;
+    left: -110px;
+  }
+  #project > #project-slider > section > div {
+    width: 370px;
+  }
+  .imgHover {
+    width: 370px;
+  }
+  .card-container #card div img {
+    width: 370px;
+  }
+  .card-container #card h2 {
+    font-size: 25px;
+  }
+  #project > img {
+    right: 7px;
+  }
+  
+}
+@media all and (max-width: 375px) {
+  #project {
+    height: 95vh;
+  }
+  #project > #project-slider {
+    top: -90px;
+  }
+  #project > #project-slider > section {
+    left: -145px;
+    grid-column-gap: 59px;
+  }
+  #project > h5 {
+    font-size: 20px;
+  }
+  #project > h1 {
+    font-size: 45px;
+  }
+  #project > #project-slider > section > div {
+    width: 290px;
+    height: 360px;
+  }
+  .imgHover {
+    width: 290px;
+  }
+  .card-container #card div img {
+    width: 290px;
+  }
+  .card-container #card h2 {
+    font-size: 20px;
+  }
+  .imgHover {
+    font-size: 9px;
+  }
+  #project > img {
+    height: 430px;
+  }
+  
+ 
+}
+@media all and (max-width: 320px) {
+  
+}
+
+/* Home Responsive Style End */
