--- a/assets/css/contactSectionStyle.css
+++ b/assets/css/contactSectionStyle.css
@@ -244,7 +244,7 @@ button[type="submit"]:hover {
 }
 @media all and (max-width: 425px) {
   #contact {
-    height: 145vh;
+    height: 1060px;
   }
   #contact > h1 {
     left: 30px;
@@ -285,9 +285,6 @@ button[type="submit"]:hover {
  
 }
 @media all and (max-width: 375px) {
-  #contact {
-    height: 155vh;
-}
   #contact .wrapper {
     left: 30px;
   }
