--- a/assets/css/educationSectionStyle.css
+++ b/assets/css/educationSectionStyle.css
@@ -509,15 +509,16 @@
 
 }
 @media all and (max-width: 425px) {
+  #education {
+    height: 1290px;
+  }
   #education > img {
     height: 145px;
   }
   
 }
 @media all and (max-width: 375px) {
-  #education {
-    height: 190vh;
-  }
+  
   #education > section {
     width: 305px;
   }
