--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ html{
 /*Header Start*/
 header {
   
-  position: relative;
+  position: sticky;
   padding: 0;
   margin: 0;
   text-decoration: none;
